--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
 
 
-{% block blockname %}
+{% block page_title %}
+    Not found
+{% endblock page_title %}
+    
+
+{% block content %}
     <h1>Not found</h1>
-{% endblock blockname %}
+{% endblock content %}
     
