--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 
-{% block page_name %}
-    Home
-{% endblock page_name %}
+{% block page_title %}
+    {{room.name}}
+{% endblock page_title %}
     
 
-{% block blockname %}
+{% block content %}
 <div>
     <h1>{{room.name}}</h1>
     <h3>{{room.description}}</h3>
