--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 
-{% block page_name %}
+{% block page_title %}
     Home
-{% endblock page_name %}
+{% endblock page_title %}
     
 
-{% block blockname %}
+{% block content %}
 
     {% for room in rooms %}
         <h3>
@@ -28,7 +28,7 @@
         <a href="?page={{page_obj.next_page_number}}">Next</a>
     {% endif %}
     </h5>
-{% endblock blockname %}
+{% endblock content %}
     
 
 
