--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block page_title %}
-    Login
+    Sign Up
 {% endblock page_title %}
 
 {% block search-bar %}
@@ -9,10 +9,10 @@
 
 {% block content %}
 
-    <form method= "POST" action="{% url "users:login" %}">
+    <form method= "post" action="{% url "users:signup" %}">
         {% csrf_token %}
         {{form.as_p}}
-        <button>Login</button>
+        <button>Sign Up</button>
     </form>
     
 
