--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,13 +1,13 @@
-    <a href="{% url "core:home" %}">Nbnb</a>
-    <ul>
+<ul class="flex items-center text-sm font-semibold h-full">
         
-        {% if user.is_authenticated %}
-        <li><a href="{% url "users:logout" %}">Log out</a></li>
-        {% else %}
-        <li><a href="{% url "users:login" %}">Login</a></li>
-        <li><a href="{% url "users:signup" %}">Sign up</a></li>
-        {% endif %}
+    {% if user.is_authenticated %}
+    <li class="nav_link"><a href="{{user.get_absolute_url}}">Profile</a></li>
+    <li class="nav_link"><a href="{% url "users:logout" %}">Log out</a></li>
+    {% else %}
+    <li class="nav_link"><a href="{% url "users:login" %}">Login</a></li>
+    <li class="nav_link"><a href="{% url "users:signup" %}">Sign up</a></li>
+    {% endif %}
             
 
-    </ul>
+</ul>
 
