--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -8,26 +8,29 @@
 
 {% block content %}
 
-    {% for room in rooms %}
-        <h3>
-            <a href="{% url "rooms:detail" room.pk %}">
-            {{room.name}} / ${{room.price}}
-            </a>
-        </h3>
-    {% endfor %}
+    <div class="container mx-auto pb-10">
+        <div class="rounded-3xl -mx-40 bg-gray-800 h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1434434319959-1f886517e1fe?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80)"></div>
+        <div class="flex flex-wrap -mx-40 mb-10">
+            {% for room in rooms %}
+            {% include 'mixins/room_card.html' with room=room %}
+            {% endfor %}
+        </div>
+        <div class="flex items-center justify-center mx-auto container">
+            {% if page_obj.has_previous %}
+                <a href="?page={{page_obj.previous_page_number}}" class="text-red-300">
+                    <i class="fas fa-arrow-left fa-lg"></i>
+                </a>
+            {% endif %}
 
-    <h5>
-    
-    {% if page_obj.has_previous %}
-        <a href="?page={{page_obj.previous_page_number}}">Previous</a>
-    {% endif %}
+            <span class="mx-3 font-medium text-lg">{{page_obj.number}} of {{page_obj.paginator.num_pages}}</span>
 
-    page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
-
-    {% if page_obj.has_next %}
-        <a href="?page={{page_obj.next_page_number}}">Next</a>
-    {% endif %}
-    </h5>
+            {% if page_obj.has_next %}
+                <a href="?page={{page_obj.next_page_number}}" class="text-red-300">
+                    <i class="fas fa-arrow-right fa-lg"></i>
+                </a>
+            {% endif %}
+        </div>
+    </div>
 {% endblock content %}
     
 
