--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load is_booked %}
 
 {% block page_title %}
     {{room.name}}
@@ -77,7 +78,12 @@
                                 {% include 'mixins/user_avatar.html' with user=review.user h_and_w='w-10 h-10' text='text-xl' %}
                             </div>
                             <div class="flex flex-col ml-5">
-                                <span class="font-medium">{{review.user.first_name}}</span>
+                                <div class="font-medium">
+                                    <div class="justify-between text-red-500">
+                                        <a href="{% url 'reviews:update' room.pk review.pk %}">Update</a>
+                                        <a href="{% url 'reviews:delete' room.pk review.pk %}">Delete</a>
+                                    </div>
+                                    {{review.user.first_name}}</div>
                                 <span class="text-sm text-gray-500">{{review.created|date:'F Y'}}</span>
                             </div>
                         </div>
@@ -103,11 +109,14 @@
                     </div>
                     <div class="grid grid-cols-7 gap-4 justify-items-center">
                         {% for day in calendar.get_days %}
+                            {% is_booked room day as is_booked_bool %}
                             {% if day.number != 0 %}
                                 {% if day.past %}
                                     <span class="rounded bg-gray-200 w-full text-center p1 text-gray-300">{{day}}</span>
+                                {% elif is_booked_bool %}
+                                    <span class="rounded bg-gray-200 w-full text-center p1 text-gray-300 line-through">{{day}}</span>
                                 {% else %}
-                                    <span class="bg-gray-200 w-full text-center rounded text-gray-700 p-1 hover:bg-green-400 hover:font-semibold hover:text-white cursor-pointer">{{day}}</span>
+                                    <a href="{% url 'reservations:create' room.pk day.year day.month day.number %}" class="bg-gray-200 w-full text-center rounded text-gray-700 p-1 hover:bg-green-400 hover:font-semibold hover:text-white cursor-pointer">{{day}}</a>
                                 {% endif %}
                                     
                             {% else %}
