--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static i18n %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -18,9 +18,13 @@
             <a href="{% url "core:home" %}" class="mr-6">
                 <img class="w-8" src="{% static 'img/logo.png' %}">
             </a>
-            {% block search-bar %}            
+            {% block search-bar %}
             <form method="get" action="{% url "rooms:search" %}" class="w-9/12">
-                <input class="w-full search-box font-medium text-gray-900 placeholder-gray-600 border px-5 py-3 rounded-sm shadow-md hover:shadow-lg focus:outline-none" name="city" placeholder="Search by city" />
+                <input 
+                    class="w-full search-box font-medium text-gray-900 placeholder-gray-600 border px-5 py-3 rounded-sm shadow-md hover:shadow-lg focus:outline-none" 
+                    name="city" 
+                    placeholder="{% trans 'Search by city' %}" 
+                    />
             </form>
             {% endblock search-bar %}
         </div>
@@ -29,5 +33,13 @@
 
         {% block content %}{% endblock %}
         {% include 'partials/footer.html' %}
+        <script>
+            const langSelect= document.getElementById("js-lang");
+            const handleLangChange = () => {
+                const selected = langSelect.value;
+                fetch(`{% url 'users:switch-language' %}?lang=${selected}`).then(() => window.location.reload());
+            };
+            langSelect.addEventListener("change", handleLangChange);
+        </script>
     </body>
 </html>
