--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,13 @@
+{% load i18n %}
+
 <footer class="container mx-auto text-center py-10 border-t font-medium text-gray-500">
-    &copy; Nbnb
+    <div>
+        {% trans '&copy; Nbnb' %}
+    </div>
+    <div class="mt-10 flex">
+        <select class="w-1/5 h-8" id="js-lang">
+            <option value="en">English</option>
+            <option value="jp">Japanese</option>
+        </select>
+    </div>
 </footer>
