--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -10,6 +10,9 @@
   a {
     @apply py-10 px-5;
   }
+  &:hover {
+    @apply border-gray-600;
+  }
 }
 
 .btn {
@@ -26,7 +29,7 @@
 input,
 textarea,
 select {
-  @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-600 px-5;
+  @apply rounded-sm font-light text-lg w-full text-left border border-gray-600 px-5;
   &:focus {
     @apply outline-none border-red-500;
   }
