add room delete function

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -29,7 +29,7 @@
 input,
 textarea,
 select {
-  @apply rounded-sm font-light text-lg w-full text-left border border-gray-600 px-5;
+  @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-600 px-5;
   &:focus {
     @apply outline-none border-red-500;
   }
@@ -45,10 +45,6 @@ select {
 }
 
 form {
-  input {
-    @apply py-5;
-  }
-
   .input {
     @apply mb-3 w-full;
     &.has_error {
