add valueValidator in rooms Integerfield

--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -97,7 +97,7 @@
     <div class='w-1/3'>
         {% if room.host == user %}
             <a href="{% url 'rooms:edit' room.pk %}" class="btn-link block mb-5 bg-green-500">Edit Room</a>
-            <a href="{% url 'rooms:delete' room.pk %}" class="btn-link block" onclick="return confirm('Do you want to Delete?')">Delete Room</a>
+            <a href="{% url 'rooms:delete' room.pk %}" class="btn-link block" onclick="return confirm('Do you want to delete this room?')">Delete Room</a>
         {% else %}
             {% if not request.session.is_hosting %}
                 {% for calendar in room.get_calendars %}
@@ -134,7 +134,7 @@
 </div>
 
 <script>
-    
+
 </script>
 
 {% endblock %}
